--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -25,7 +25,7 @@
             </div>
         </section>
 
-            {{!-- SHOP --}}
+            {{!-- SHOP ---}}
         <section>
             <div class="shop">
 
