--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -41,7 +41,7 @@
                         </path>
                     </svg>
                 
-                    <img src="img/BLUSA/blusa_02.png" alt="camisa sal e luz 2023">
+                    <img src="img/BLUSA/blusa_02.jpg" alt="camisa sal e luz 2023">
                 </div>
 
                 <div class="shop_description">
