--- a/src/assets/css/saleluz.css
+++ b/src/assets/css/saleluz.css
@@ -19,6 +19,7 @@
   padding: 0;
   box-sizing: border-box;
   list-style: none;
+  scroll-behavior: smooth;
 }
 
 header
@@ -96,11 +97,19 @@ body
 
 main 
 {
-  padding-top: 150px;
+  padding: 150px 0 ;
   background-image: url("../img/BACKGROUND/primary.jpg");
   position: relative;
   overflow-x: hidden;
   z-index: 5;
+}
+
+main section
+{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 main section > img
@@ -289,7 +298,7 @@ main section .mais-informacoes .images-event img
 
 main section .mais-informacoes .mais-informacoes_pergunta
 {
-  margin-top: 80px;
+  margin: 150px 0 50px 0;
   position: relative;
   display: flex;
   align-items: center;
@@ -304,6 +313,7 @@ main section .mais-informacoes .mais-informacoes_pergunta h1
   font-family: var(--font-01);
   font-weight: normal;
   font-style: italic;
+  font-size: 35px;
 }
 
 main section .mais-informacoes .mais-informacoes_pergunta img
@@ -311,12 +321,14 @@ main section .mais-informacoes .mais-informacoes_pergunta img
   position: absolute;
   top: -25;
   opacity: 0.3;
+  transform: scale(1.2);
 }
 
 main section .shop
 {
   margin-top: 125px;
   position: relative;
+  max-width: 359px;
 }
 
 main section .shop h1
@@ -332,8 +344,8 @@ main section .shop h1
 main section .shop span
 {
   display: block;
-  margin-top: 5px;
-  margin-left: 55px;
+  margin-top: 10px;
+  margin-left: 16px;
   font-size: 20px;
   font-family: var(--font-01);
   font-weight: normal;
@@ -344,17 +356,206 @@ main section .shop span
 main section .shop a
 {
   display: block;
-  bottom: -17px;
+  bottom: -35px;
   right: 0;
-  font-size: 20px;
+  font-size: 21px;
   position: absolute;
   text-decoration: none;
   color: var(--color-06);
   font-family: monospace;
   text-transform: uppercase;
-  transform: translateX(-18px);
+  transform: translateX(-10px);
   background-color: var(--color-05);
-  padding: 5px 10px;
+  border: 0.5px solid var(--color-04);
+  padding: 8px 10px;
   border-radius: 15px;
   font-weight: bold;
+  transition: all .3s cubic-bezier(0.175, 0.885, 0.32, 1);
+}
+
+main section .shop a:hover
+{
+  background-color: var(--color-02);
+  border: 0.5px solid var(--color-04);
+}
+
+main section .shop-itens
+{
+  margin-top: 80px;
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+main section .shop-itens svg
+{
+  width: 347px;
+}
+
+main section .shop-itens svg:nth-child(1)
+{
+    position: absolute;
+    top: 0;
+    z-index: -1;
+    transform: translateX(-15px);
+    transition: all .3s cubic-bezier(0.165, 0.84, 0.44, 1);
+}
+
+main section .shop-itens:hover svg:nth-child(1)
+{
+    transform: translateX(-20px);
+}
+
+main section .shop-itens svg:nth-child(1) path
+{
+  fill: var(--color-05);
+}
+
+main section .shop-itens svg:nth-child(2) path
+{
+  fill: var(--color-02);
+}
+
+main section .shop-itens svg:nth-child(2)
+{
+    position: absolute;
+    top: 0;
+    z-index: 0;
+    transform: translateY(15px);
+    transition: all 1s cubic-bezier(0.165, 0.84, 0.44, 1);
+}
+
+main section .shop-itens:hover svg:nth-child(2)
+{
+    transform: translateY(15px) translateX(10px);
+}
+
+main section .shop-itens img {
+    width: 320px;
+    height: fit-content;
+    object-fit: cover;
+    transform: translateX(50px);
+}
+
+
+main section .doacao
+{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-top: 75px;
+  position: relative;
+}
+
+main section .doacao h1
+{
+  font-family: var(--font-01);
+  color: var(--color-06);
+  font-size: 40px;
+}
+
+main section .doacao p
+{
+  color: var(--color-06);
+  font-family: 'Courier New', Courier, monospace;
+  padding: 5px 15px;
+  margin-top: 15px;
+  max-width: 320px;
+  font-size: 20px;
+  text-align: right;
+  line-height: 27px;
+}
+
+main section .doacao p span
+{
+  background-color: var(--color-04);
+  font-weight: bold;
+  color: var(--color-07);
+  padding: 2px 5px;
+  border-radius: 8px;
+}
+
+main section .doacao img
+{
+  width: 250px;
+}
+
+main section .doacao img.smartphone
+{
+  margin-top: 47px;
+}
+
+main section .doacao img.doar
+{
+  position: absolute;
+  top: 0;
+  left: 50%;
+  transform: translateX(-215%);
+  width: 100px;
+  opacity: 0.5;
+}
+
+main section .doacao img.qrcode
+{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translateX(-50%) translateY(50px);
+  border-radius: 4px;
+  width: 204px;
+  background-color: white;
+  border: none;
+}
+
+main section .maisinfo
+{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 50px;
+  margin-top: 55px;
+
+}
+
+main section .maisinfo h1
+{
+  color: var(--color-06);
+  max-width: 320px;
+  text-align: center;
+  font-family: var(--font-01);
+  font-weight: normal;
+  font-size: 40px;
+}
+
+main section .maisinfo .redes-sociais
+{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 25px;
+}
+
+main section .maisinfo .redes-sociais a
+{
+  text-decoration: none;
+  background-color: var(--color-02);
+  padding: 8px 35px;
+  font-size: 20px;
+  font-family: var(--font-01);
+  color: var(--color-04);
+  border-radius: 8px;
+  border: 0.5px solid var(--color-04);
+  transition: all .3s cubic-bezier(0.175, 0.885, 0.32, 1.975);
+}
+
+main section .maisinfo .redes-sociais a:hover
+{
+  letter-spacing: 2px;
+  background-color: var(--color-04);
+  color: var(--color-02);
+  border: 0.5px solid var(--color-02);
 }
