--- a/views/layouts/saleluz.handlebars
+++ b/views/layouts/saleluz.handlebars
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/saleluz.css">
+    <link rel="stylesheet" href="css/mediaSaleLuz.css">
     <link rel="shortcut icon" href="img/icone/icone.png" type="image/x-icon">
     
     <script src="https://unpkg.com/@phosphor-icons/web"></script>
