--- a/src/assets/css/saleluz.css
+++ b/src/assets/css/saleluz.css
@@ -14,12 +14,80 @@
     --font-01: "Edo";
 }
 
+
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   list-style: none;
   scroll-behavior: smooth;
+}
+
+html
+{
+  background-color: var(--color-01);
+}
+
+body
+{
+  background-color: var(--color-07);
+}
+
+body .load
+{
+  width: 100%;
+  height: 100%;
+  background-color: var(--color-01);
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  gap: 15px;
+  user-select: none;
+  cursor: not-allowed;
+}
+
+body .load span
+{
+  width: 15px;
+  height: 15px;
+  z-index: 10;
+  background-color: var(--color-04);
+  animation: AnimateLoad .5s ease-in-out alternate infinite;
+}
+
+body .load span:nth-child(1)
+{
+  animation-delay: 0.5s;
+}
+
+body .load span:nth-child(2)
+{
+  animation-delay: 0.8s;
+}
+
+body .load span:nth-child(3)
+{
+  animation-delay: 1s;
+}
+
+@keyframes AnimateLoad {
+  0%
+  {
+    opacity: 0.5;
+    box-shadow: 0 0 10px var(--color-01);
+    transform: scale(1);
+  }
+  100%
+  {
+    opacity: 1;
+    box-shadow: 0 0 5px var(--color-04);
+    transform: scale(1.2);
+  }
 }
 
 header
@@ -34,6 +102,8 @@ header
   position: fixed;
   top: 0;
   left: 0;
+
+  display: none;
 }
 
 header .logo-chamaviva img
@@ -97,7 +167,9 @@ body
 
 main 
 {
+  display: none;
   padding: 150px 0 ;
+  background-color: var(--color-01);
   background-image: url("../img/BACKGROUND/primary.jpg");
   position: relative;
   overflow-x: hidden;
