--- a/views/saleluz.handlebars
+++ b/views/saleluz.handlebars
@@ -1,3 +1,9 @@
+
+<div class="load">
+    <span></span>
+    <span></span>
+    <span></span>
+</div>
 <header>
     <div class="logo-chamaviva">
         <img src="img/icone/icone.png" alt="">
