--- a/views/saleluz.handlebars
+++ b/views/saleluz.handlebars
@@ -31,7 +31,7 @@
         <img src="img/BACKGROUND/png_01.png" class="img-02" alt="">
 
         <div class="apresentacao">
-            <img src="img/logo_sf.png" alt="logo" loading="lazy">
+            <img src="img/logo_sf.png" alt="logo">
         </div>
 
         <div class="intagram-info">
