--- a/views/saleluz.handlebars
+++ b/views/saleluz.handlebars
@@ -9,6 +9,24 @@
         <img src="img/icone/icone.png" alt="">
     </div>
 
+    <div class="time-date">
+        <div class="elements-time">
+            <span id="days">00</span>
+            <span>Day</span>
+        </div>
+        <div class="elements-time">
+            <span id="hours">00</span>
+            <span>Hours</span>
+        </div>
+        <div class="elements-time">
+            <span id="mins">00</span>
+            <span>Minutes</span>
+        </div>
+        <div class="elements-time">
+            <span id="sec">00</span>
+            <span>Seconds</span>
+        </div>
+    </div>
     <div class="open_menu">
         <i class="ph-bold ph-list menu-open"></i>
     </div>
