--- a/views/saleluz.handlebars
+++ b/views/saleluz.handlebars
@@ -12,7 +12,7 @@
     <div class="time-date">
         <div class="elements-time">
             <span id="days">00</span>
-            <span>Day</span>
+            <span>Days</span>
         </div>
         <div class="elements-time">
             <span id="hours">00</span>
