--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -69,9 +69,10 @@
 
             <div class="final-descricao-culto">
                 <span>18H</span>
-                <h1>MOMENTO ADORAÇÃO</h1>
-                <img src="img/chamaviva/svg03.svg" alt="">
+                <h1>MOMENTO<br> ADORAÇÃO</h1>
+                <img class="svg03" src="img/chamaviva/svg03.svg" alt="">
             </div>
+            <img class="svg04" src="img/chamaviva/svg02.svg" alt="">
         </div>
     </section>
 </main>
