--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,4 +1,4 @@
-<main>
+<main >
     <section id="inicio">
         <div class="chamaviva-logo">
             <div class="text-logo">
@@ -26,12 +26,12 @@
             <div class="lideres">
                 <div class="lider">
                     <h1>Jaiane</h1>
-                    <img src="img/chamaviva/logo-chama.svg" alt="">
+                    <img src="img/PRESIDENTES/presidentes.jpeg" alt="">
                     <p>Caso queira colocar alguma descrição</p>
                 </div>
                 <div class="lider">
                     <h1>Mayara</h1>
-                    <img src="img/chamaviva/logo-chama.svg" alt="">
+                    <img src="img/PRESIDENTES/presidentes.jpeg" alt="">
                     <p>Caso queira colocar alguma descrição</p>
                 </div>
             </div>
@@ -75,4 +75,50 @@
             <img class="svg04" src="img/chamaviva/svg02.svg" alt="">
         </div>
     </section>
+
+    <section id="endereco">
+        <div class="endereco">
+            <div class="localizacao">
+                <div class="background-effect"></div>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3981.100582733045!2d-38.597387925452956!3d-3.788280043478805!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7c74c48b1a77ae1%3A0x798d04db4894a472!2sR.%20Luminosa%2C%20585%20-%20Granja%20Portugal%2C%20Fortaleza%20-%20CE%2C%2060540-755!5e0!3m2!1spt-BR!2sbr!4v1692396058481!5m2!1spt-BR!2sbr" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
+
+            <div class="localizacao-name">
+                <div class="imagem-igreja swiper">
+                    <div class="swiper-wrapper">
+                        <div class="swiper-slide">
+                            <img src="img/chamaviva/igreja_foto.jpeg" alt="Nossa igreja">
+                        </div>
+                        <div class="swiper-slide">
+                            <img src="img/chamaviva/igreja_foto.jpeg" alt="Nossa igreja">
+                        </div>
+                        <div class="swiper-slide">
+                            <img src="img/chamaviva/igreja_foto.jpeg" alt="Nossa igreja">
+                        </div>
+                    </div>
+                    
+                </div>
+
+                <div class="nome-rua">
+                    <h1>RUA LUMINOSA,<br> 585 BOM JARDIM</h1>
+                    <img src="img/chamaviva/localizacao01.webp" alt="localização">
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="mensagem-final">
+        <div class="mensagem-final">
+            <h1>PRONTOS<br> PARA VIVER O <br>ESTRAORDINÁRIO</h1>
+            <span>?</span>
+        </div>
+    </section>
+
+
+    <div class="voltar">
+        <a href="#body">
+            <i class="ph ph-arrow-fat-lines-up"></i>
+        </a>
+    </div>
+
 </main>
