--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/home/home.css">
+    <link rel="stylesheet" href="css/home/auto.css">
     <link rel="shortcut icon" href="img/icone/icone.png" type="image/x-icon">
     
     <script src="https://unpkg.com/@phosphor-icons/web"></script>
@@ -14,7 +15,7 @@
     <title>Chama Viva ADBJ</title>
     
 </head>
-<body id="body">
+<body id="body" data-theme="dafault">
     {{> menu}}
     {{{body}}}
 
