--- a/src/assets/css/home/home.css
+++ b/src/assets/css/home/home.css
@@ -24,6 +24,11 @@
     src: url(".././fonts/LEMONMILK-Bold.otf");
   }
 
+  @font-face {
+    font-family: "Edo";
+    src: url(".././fonts/edosz.ttf");
+  }
+
 :root
 {
     --color-01:#D91604;
@@ -39,7 +44,9 @@
     --font-03: "RONORGERIONDEMO";
     --font-04: "Mantilda";
     --font-05: "Lemon";
+    --font-06: "Edo";
 }
+
 
 *
 {
@@ -51,6 +58,7 @@
 
 body{
     position: relative;
+    padding-bottom: 58px;
     min-height: 100vh;
     background-image: url("../../img/chamaviva/background-01.png");
 }
@@ -103,7 +111,7 @@ header .menu nav ul{
 
     list-style: none;
 
-    background-color: var(--color-01);
+    background-color: var(--color-07);
     width: 100%;
 }
 
@@ -125,8 +133,9 @@ header .menu nav ul li a
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    gap: 2px;
-
+    gap: 8px;
+    font-family: var(--font-05);
+    font-size: 13px;
     color: var(--color-06);
 }
 
@@ -139,7 +148,7 @@ header .menu nav ul li a i
 main
 {
     position: relative;
-    padding: 128px  0;
+    padding: 128px  0 40px 0;
 }
 
 main section
@@ -489,7 +498,7 @@ main section .culto-logo > span:nth-child(3)
 
 main section .culto .culto-descricao
 {
-    margin-top: 105px;
+    padding-top: 200px;
 }
 
 main section .culto .culto-descricao p
@@ -516,11 +525,11 @@ main section .culto .final-descricao-culto span
     position: absolute;
     top: 0;
     left: 0;
-    transform: rotate(-90deg) translateX(-82px);
+    transform: rotate(-90deg) translateX(-91px);
     font-family: var(--font-05);
-    font-size: 25px;
+    font-size: 29px;
     color: var(--color-03);
-    text-shadow: 0px 0px 10px var(--color-06);
+    text-shadow: 2px 2px 0px var(--color-07);
 }
 
 main section .culto .final-descricao-culto h1
@@ -528,18 +537,19 @@ main section .culto .final-descricao-culto h1
     text-align: center;
     font-family: var(--font-01);
     width: fit-content;
-    transform: translateX(40px);
+    transform: translateX(55px);
     font-size: 21px;
     color: var(--color-02);
-    letter-spacing: 2px;
+    letter-spacing: 7px;
+    text-shadow: 1px 1px 0px var(--color-02);
+    
 }
 
 main section .culto .final-descricao-culto img.svg03
 {
-    transform: translateX(75px) translateY(8px) rotateX(180deg);
-    height: 28px;
+    transform: translateX(75px) translateY(17px) rotateX(180deg);
+    height: 36px;
     object-fit: contain;
-    filter: hue-rotate(26deg);
 }
 
 main section .culto img.svg04
@@ -547,8 +557,179 @@ main section .culto img.svg04
     position: absolute;
     top: 0;
     left: 0;
-    transform: translateY(445px) translateX(39px) rotate(54deg);
+    transform: translateY(535px) translateX(39px) rotate(54deg);
     z-index: -1;
     width: 320px;
 }
+
+
+main section#endereco
+{
+    padding-top: 55px;
+}
+
+main section .endereco .localizacao
+{
+    position: relative;
+
+}
+
+main section .endereco .localizacao iframe
+{
+    width: 300px;
+    height: 300px;
+    border: 0.5px solid var(--color-07);
+    border-radius: 8px;
+    box-shadow: 4px -4px 0px var(--color-03);
+    background-color: var(--color-03);
+}
+
+
+main section .endereco .localizacao .background-effect
+{
+    width: 320px;
+    height: 400px;
+    top: -42px;
+    left: -94px;
+    z-index: -1;
+    position: absolute;
+    clip-path: polygon(3% 53%, 0 4%, 28% 0, 38% 3%, 64% 2%, 75% 4%, 96% 4%, 99% 7%, 100% 37%, 98% 61%, 100% 93%, 94% 97%, 78% 98%, 70% 95%, 60% 94%, 50% 96%, 38% 93%, 22% 95%, 0 96%);
+    background-color: var(--color-02);
+}
+
+main section .endereco .localizacao-name
+{
+    padding-top: 85px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    gap: 35px;
+}
+
+main section .endereco .localizacao-name .swiper
+{
+    max-width: 320px;
+    
+}
+
+main section .endereco .localizacao-name .swiper img
+{
+    width: 100%;
+    object-fit: contain;
+    border-radius: 8px;
+}
+
+main section .endereco .localizacao-name .nome-rua
+{
+    position: relative;
+
+
+    width: 100%;
+    transition: all .3s cubic-bezier(0.175, 0.885, 0.32, 2.275);
+    
+}
+
+main section .endereco .localizacao-name .nome-rua:hover
+{
+    box-shadow: 4px 4px 0px var(--color-07),
+               -4px -4px 0px var(--color-07);
+}
+
+main section .endereco .localizacao-name .nome-rua h1
+{
+    font-family: var(--font-05);
+    color: var(--color-07);
+    /* text-indent: 10px; */
+    text-align: right;
+    padding: 8px;
+    cursor: context-menu;
+}
+
+main section .endereco .localizacao-name .nome-rua > img
+{
+    max-width: 60px;
+    position: absolute;
+    top: -14px;
+    left: -3px;
+    padding: 5px;
+}
+
+main section#mensagem-final
+{
+    padding-top: 80px;
+    overflow: hidden;
+}
+
+
+main section#mensagem-final .mensagem-final
+{
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    padding: 50px 0;
+}
+
+main section#mensagem-final .mensagem-final h1
+{
+    font-family: var(--font-06);
+    font-size: 40px;
+    color: var(--color-07);
+    font-weight: normal;
+    transform: rotate(355deg);
+
+}
+
+main section#mensagem-final .mensagem-final span
+{
+    position: absolute;
+    right: -46px;
+    top: -90px;
+    font-size: 335px;
+    opacity: 0.2;
+    z-index: -1;
+    font-family: var(--font-06);
+    transform: rotate(10deg);
+}
+
+main .voltar
+{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    margin-top: 20px;
+    padding: 30px 0;
+}
+
+main .voltar a
+{
+    text-decoration: none;
+    animation: AnimeBack .5s ease-in alternate infinite;
+}
+
+main .voltar a i
+{
+    font-size: 35px;
+    background-color: var(--color-02);
+    padding: 5px;
+    border-radius: 4px;
+    color: var(--color-07);
+    
+}
+
+@keyframes AnimeBack {
+    to
+    {
+        transform: translateY(-5px);
+    }
+    from
+    {
+        transform: translateY(0px);
+    }
+}
+
+
 
