--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -12,12 +12,13 @@
         <div class="descricao-evento">
             <div class="descricao-detalhes">
                 <p>Escolhidos para viver as promessas de Deus</p>
-                <a href="">@chamavivaadbj</a>
+                <a href="https://www.instagram.com/chamavivaadbj/">@chamavivaadbj</a>
             </div>
             <div class="detalhes-img">
                 <img src="img/SAL_E_LUZ/02.jpeg" alt="jovens">
             </div>
         </div>
+        <img class="effect01" src="img/chamaviva/png01.png" >
     </section>
 
     <section id="sobre">
@@ -72,8 +73,13 @@
                 <h1>MOMENTO<br> ADORAÇÃO</h1>
                 <img class="svg03" src="img/chamaviva/svg03.svg" alt="">
             </div>
-            <img class="svg04" src="img/chamaviva/svg02.svg" alt="">
+            <img class="svg04" src="img/chamaviva/svg02.svg">
+            
         </div>
+
+        
+        <img class="effect02" src="img/chamaviva/png01.png" >
+        
     </section>
 
     <section id="endereco">
@@ -109,7 +115,7 @@
 
     <section id="mensagem-final">
         <div class="mensagem-final">
-            <h1>PRONTOS<br> PARA VIVER O <br>ESTRAORDINÁRIO</h1>
+            <h1>PRONTOS<br> PARA VIVER O <br>EXTRAORDINÁRIO</h1>
             <span>?</span>
         </div>
     </section>
@@ -121,4 +127,9 @@
         </a>
     </div>
 
+<img class="effect03" src="img/chamaviva/png01.png" >
+<img class="effect04" src="img/chamaviva/png01.png" >
+<img class="effect05" src="img/chamaviva/svg02.svg" >
+<img class="effect06" src="img/chamaviva/svg02.svg" >
+<img class="effect07" src="img/chamaviva/png01.png" >
 </main>
