--- a/src/assets/css/home/home.css
+++ b/src/assets/css/home/home.css
@@ -60,7 +60,7 @@ body{
     position: relative;
     padding-bottom: 58px;
     min-height: 100vh;
-    background-image: url("./img/background_2.jpg");
+    background-image: url("./img/background_2.png");
 }
 
 header
